What's new...

Dec 4/2019 : JF 18.0.0 released
  - new app : jfBackup/0.1
    - Enterprise Tape Backup Solution
    - Volume Shadow Backup
    - Multiple Servers
    - Backup to tape drive/media changer (barcodes supported)
    - Web interface
    - when corporate IT pulled our license for our company wide backup software I tried other
      open source solutions but they were all unacceptable so I build our own ;)
  - new app : jfDVR/0.0 (not released yet)
    - Records IP/RTSP cameras
    - due to performance issues this release is delayed until I can find a better JVM (maybe graal someday)

Mar 8/2019 : JF 17.5.0 released
  - fix : ffmpeg loading/saving issues
  - new : upgrade to ffmpeg/4.x
  - jfAudio/0.18
  - jfVideo/0.22
  - jfMusic/0.6
  - jfRecordCamera/0.6
  - jfRecordDesktop/0.7
  - jfProjector/0.2
    - re-release all ffmpeg related apps

Feb 27/2019 : JF 17.4.0 released
  - new : jfmodbusserver/0.2 : added support for I2C devices on Raspberry PI

Jan 24/2019 : JF 17.3.0 released
  - new : jfsocks/0.1 : SOCKS4 server (something I needed at work)
  - new : jfpasswords/0.20 : added OpenSite and Help buttons

Oct 15/2018 : JRE 11-2
  - new : JRE-11 : added .jar file association to javaw.exe in wix config

Sept 26/2018 : JF 17.2.0 released
  - Java 11 support
    - Since Oracle will no longer release a JRE I've made one available at javaforce.sourceforge.net
      - basically just package the JDK without the mod files and create required registry keys
  - jfPasswords/0.19
    - add JRE to MSI package
  - jfDataLogger/0.22
    - new : added csv save function
  - jfPhone/1.16
    - fix : version checking function

Sept 21/2018 : JF 17.1.0 released
  - jfPhone/1.15 released!
    - minor fixes
  - jfPBX/0.27 released!
    - minor fixes

Sept 19/2018 : JF 17.0.0 released
  - new : JFAWT.removeAltGraph()
    - removes AltGraph modifier which was added in Java9
    - the right Alt and AltGraph use the same scancode